Remove all modules and Jigsaw related things from the Maven pom.xml