@@ -13,7 +13,6 @@
         <version.com.impossibl.pgng>0.6</version.com.impossibl.pgng>
         <version.junit>4.12</version.junit>
         <version.org.hibernate>5.3.2-SNAPSHOT</version.org.hibernate>
-        <modules.dir>${project.build.directory}/modules</modules.dir>
     </properties>
 
     <dependencyManagement>
@@ -84,11 +83,6 @@
                         <release>10</release>
                         <source>10</source>
                         <target>10</target>
-                        <compilerArgs>
-                            <arg>-classpath</arg>
-                            <arg>${project.build.directory}/target/classes</arg>
-                            <arg>--module-path=${modules.dir}</arg>
-                        </compilerArgs>
                     </configuration>
                     <dependencies>
                         <dependency>
@@ -102,69 +96,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
-                    <configuration>
-                        <outputDirectory>${modules.dir}</outputDirectory>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.20.1</version>
-                    <configuration>
-                        <argLine>--add-modules java.xml.bind</argLine>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.2</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${modules.dir}</outputDirectory>
-                            <includeScope>compile</includeScope>
-                            <excludeArtifactIds>jboss-transaction-api_1.2_spec</excludeArtifactIds>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-additional-modules</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${modules.dir}</outputDirectory>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>org.jboss.spec.javax.interceptor</groupId>
-                                    <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
-                                    <version>1.0.1.Final</version>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>javax.enterprise</groupId>
-                                    <artifactId>cdi-api</artifactId>
-                                    <version>2.0</version>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>org.jboss.spec.javax.transaction</groupId>
-                                    <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-                                    <version>2.0.0.Alpha1</version>
-                                    <outputDirectory>${project.build.directory}/upgrade-modules</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
     <repositories>
         <repository>
